--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SLACK_BOT_OAUTH_TOKEN=
-SIGNING_SECRET=
-CHANNEL_ID=
+SLACK_BOT_OAUTH_TOKEN='your_bot_user_auth_token'
+SIGNING_SECRET='your_slack_signing_secret'
+CHANNEL_ID='your_channel_id'
 
-MYSQL_HOST=
-MYSQL_USERNAME=
-MYSQL_PASSWORD=
-MYSQL_DATABASE=
+MYSQL_HOST='your_mysql_host'
+MYSQL_USERNAME='your_mysql_username'
+MYSQL_PASSWORD='your_mysql_password'
+MYSQL_DATABASE='your_mysql_database'
